removed css position for container to prevent overlapping over gamecard

--- a/src/components/Container/style.css
+++ b/src/components/Container/style.css
@@ -1,7 +1,4 @@
 .container {
-  position: absolute;
   width: 100%;
   height: 100%;
-  /* padding-bottom: 80px; */
-  /* margin-bottom: 10%; */
 }
